# Assistant

./: README.md  test.cpp
AssistantClient/: .temp_XXXX.txt.json  CMakeLists.txt  file.json  res.json
AssistantClient/src/: FileManager.cpp  FileManager.h  dll.cpp  dll.h  head.h  mainClient.cpp  mcrypto.h  util.cpp  util.h
AssistantServer/: CMakeLists.txt  README.md  SC.sql  create_table_v1.sql
AssistantServer/.config/: .config.json.swp
AssistantServer/home/PKI/src/: FileManager.cpp  FileManager.h  dll.cpp  mainClient.cpp  mcrypto.cpp  util.cpp
AssistantServer/ref/: log.cpp
AssistantServer/src/: FileServer.cpp  Worker.cpp  Worker.h  head.h  mainServer.cpp  mcrypto.h  msql.cpp  msql.h  processpool.h  util.cpp  util.h
test/: CMakeLists.txt  mainClient.cpp
